# interview-copilot

./: Dockerfile.backend  README.md  deploy_to_ec2.sh  docker-compose.prod.yml  docker-compose.yml  error.txt  output.txt  output2.txt  package-lock.json  package.json
admin/backend/: migrate_exemption.py  requirements.txt  start-api.ps1
admin/frontend/: .env.local  package.json  (+2 more)
app/: globals.css  layout.tsx  page.tsx
deploy/: deploy-frontends.ps1  deploy.sh  docker-compose.prod.yml  nginx.conf
shared/: .env.example  __init__.py  alembic.ini  config.py  create_placement_db.py  create_student_db.py  create_token_requests_table.py  drop_col.py  drop_placement.py  pyproject.toml  requirements.txt  run_alembic.py  seed_super_admin.py
shared/alembic/: alembic.ini  env.py  script.py.mako
shared/alembic/versions/: 001_create_admin_tables.py  002_add_user_phone.py  003_remove_student_tokens_and_platform_config.py  004_remove_plan_type.py  005_add_marksheet_table.py  006_feedback_analysis_cache.py  157b1e3face7_add_topic_progress_table.py  db5e6c78e9eb_add_topic_progress_table.py
shared/auth/: __init__.py  dependencies.py  jwt.py  passwords.py
shared/db/: __init__.py  base.py  session.py
shared/interview_copilot_shared.egg-info/: PKG-INFO  SOURCES.txt
shared/models/: __init__.py  admin_models.py  enums.py  feedback_analysis.py  interview_feedback.py  knowledge.py  llm_usage.py  marksheet.py  placement.py  plan.py  prep_license.py  resume.py  resume_gap.py  student.py  student_models.py  student_profile.py  target.py  token_request.py
student/: python_resume.txt
(+295 files in other folders)
